# coco

./: CMakeLists.txt  README.md
.github/workflows/: test.yml
include/coco/basic/: basic.hpp  basic.inl
include/coco/courier/: courier.hpp
include/coco/generator/: async.hpp  async.inl  generator.hpp  generator.inl
include/coco/handle/: handle.hpp  handle.inl
include/coco/latch/: latch.hpp
include/coco/promise/: promise.hpp  promise.inl
include/coco/stray/: stray.hpp  stray.inl
include/coco/sync/: sync.hpp  sync.inl
include/coco/task/: task.hpp  task.inl
include/coco/traits/: traits.hpp  traits.inl
include/coco/utils/: utils.hpp  utils.inl
src/: courier.cpp  latch.cpp  stray.cpp
tests/: CMakeLists.txt
tests/include/: sleep.hpp
tests/src/: basic.cpp  courier.cpp  generator.cpp  latch.cpp  promise.cpp  task.cpp  utils.cpp
